// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.html format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<foo>
                 <bar/>
</foo>

=====================================output=====================================
<foo>
  <bar />
</foo>

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo(
                 'bar')

=====================================output=====================================
foo("bar");

================================================================================
`;

exports[`test.json format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{foo:
                 'bar'}

=====================================output=====================================
{ "foo": "bar" }

================================================================================
`;

exports[`test.ts format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type foo =
                 'bar'

=====================================output=====================================
type foo = "bar";

================================================================================
`;

exports[`test.yml format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo:
                 - 'bar'

=====================================output=====================================
foo:
  - "bar"

================================================================================
`;
